--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title> James Coleman </title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="CSS/styles.css" />
   <link rel="icon" href="favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 </head>
@@ -14,8 +14,8 @@
     <img class="top-cloud" src="images/cloud.png" alt="cloud_img" />
     <h1 class="header1">I am James</h1>
     <p class="p_fp">A future junior programmer </p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud_img" />
-    <img clas="mountain" src="images/mountain.png" alt="mountain_img" />
+    <img class="bottom-cloud" src="Images/cloud.png" alt="cloud_img" />
+    <img clas="mountain" src="Images/mountain.png" alt="mountain_img" />
   </div>
   <div class="middle-container">
     <div class="profile">
